// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1- default state 1`] = `
Object {
  "canUseWebp": false,
  "currency": "usd",
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "hot",
  "hasKeyChain": false,
  "intro": true,
  "isElectron": false,
  "lang": "en-US",
  "listStyle": "row",
  "newVersion": null,
  "notifications": true,
  "searchIndexCount": 0,
  "tag": "",
  "theme": "day",
}
`;

exports[`2- location change. should change filter and tag 1`] = `
Object {
  "canUseWebp": false,
  "currency": "usd",
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "hasKeyChain": false,
  "intro": true,
  "isElectron": false,
  "lang": "en-US",
  "listStyle": "row",
  "newVersion": null,
  "notifications": true,
  "searchIndexCount": 0,
  "tag": "bitcoin",
  "theme": "day",
}
`;

exports[`3- theme change 1`] = `
Object {
  "canUseWebp": false,
  "currency": "usd",
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "hasKeyChain": false,
  "intro": true,
  "isElectron": false,
  "lang": "en-US",
  "listStyle": "row",
  "newVersion": null,
  "notifications": true,
  "searchIndexCount": 0,
  "tag": "bitcoin",
  "theme": "night",
}
`;

exports[`4- hide intro 1`] = `
Object {
  "canUseWebp": false,
  "currency": "usd",
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "hasKeyChain": false,
  "intro": false,
  "isElectron": false,
  "lang": "en-US",
  "listStyle": "row",
  "newVersion": null,
  "notifications": true,
  "searchIndexCount": 0,
  "tag": "bitcoin",
  "theme": "night",
}
`;

exports[`5- list style change 1`] = `
Object {
  "canUseWebp": false,
  "currency": "usd",
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "hasKeyChain": false,
  "intro": false,
  "isElectron": false,
  "lang": "en-US",
  "listStyle": "grid",
  "newVersion": null,
  "notifications": true,
  "searchIndexCount": 0,
  "tag": "bitcoin",
  "theme": "night",
}
`;

exports[`6- Has keychain act 1`] = `
Object {
  "canUseWebp": false,
  "currency": "usd",
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "hasKeyChain": true,
  "intro": false,
  "isElectron": false,
  "lang": "en-US",
  "listStyle": "grid",
  "newVersion": null,
  "notifications": true,
  "searchIndexCount": 0,
  "tag": "bitcoin",
  "theme": "night",
}
`;

exports[`7- Mute notifications act 1`] = `
Object {
  "canUseWebp": false,
  "currency": "usd",
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "hasKeyChain": true,
  "intro": false,
  "isElectron": false,
  "lang": "en-US",
  "listStyle": "grid",
  "newVersion": null,
  "notifications": false,
  "searchIndexCount": 0,
  "tag": "bitcoin",
  "theme": "night",
}
`;

exports[`8- Unmute notifications act 1`] = `
Object {
  "canUseWebp": false,
  "currency": "usd",
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "hasKeyChain": true,
  "intro": false,
  "isElectron": false,
  "lang": "en-US",
  "listStyle": "grid",
  "newVersion": null,
  "notifications": true,
  "searchIndexCount": 0,
  "tag": "bitcoin",
  "theme": "night",
}
`;

exports[`9- Set lang act 1`] = `
Object {
  "canUseWebp": false,
  "currency": "usd",
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "hasKeyChain": true,
  "intro": false,
  "isElectron": false,
  "lang": "tr-TR",
  "listStyle": "grid",
  "newVersion": null,
  "notifications": true,
  "searchIndexCount": 0,
  "tag": "bitcoin",
  "theme": "night",
}
`;
